新增：predixy代理构建

--- a/predixy/conf/auth.conf
+++ b/predixy/conf/auth.conf
@@ -61,10 +61,13 @@
 # }
 
 Authority {
-    Auth {
+    Auth GqdLSFUhnm6MpyeVKIu3 {
         Mode write
     }
-    Auth "#a complex password#" {
+    Auth GqdLSFUhnm6MpyeVKIu3 {
+        Mode read
+    }   
+    Auth GqdLSFUhnm6MpyeVKIu3 {
         Mode admin
     }
 }
