--- a/predixy/conf/predixy.conf
+++ b/predixy/conf/predixy.conf
@@ -42,7 +42,7 @@ ClientTimeout 300
 ## Log file path
 ## Unspecify will log to stdout
 ## Default is Unspecified
-# Log ./predixy.log
+Log ./predixy.log
 
 ## LogRotate support
 
@@ -54,7 +54,7 @@ ClientTimeout 300
 ## time rotate and size rotate can combine eg 1h 2G, means 1h or 2G roate a time
 
 ## Examples:
-# LogRotate 1d 2G
+LogRotate 1d 500M
 # LogRotate 1d
 
 ## Default is disable LogRotate
