--- a/camellia-redis-proxy/application.yml
+++ b/camellia-redis-proxy/application.yml
@@ -9,7 +9,7 @@ camellia-redis-proxy:
   #port: 6380 #priority greater than server.port, if missing, use server.port; if setting -6379, proxy will choose a random port
   #application-name: camellia-redis-proxy-server  #priority greater than spring.application.name, if missing, use spring.application.name
   console-port: 16379 #console port, default 16379, if setting -16379, proxy will choose a random port, if setting 0, will disable console
-  password: pass123   #password of proxy, priority less than custom client-auth-provider-class-name
+  password: GqdLSFUhnm6MpyeVKIu3 #password of proxy, priority less than custom client-auth-provider-class-name
   monitor-enable: false  #monitor enable/disable configure
   monitor-interval-seconds: 60 #monitor data refresh interval seconds
 #  cluster-mode-enable: true #cluster-mode, if setting true, proxy-cluster disguised as a redis-cluster, should configure proxy.cluster.mode.nodes=xx in camellia-redis-proxy.properties
