--- a/camellia-redis-proxy/application.yml
+++ b/camellia-redis-proxy/application.yml
@@ -30,7 +30,7 @@ camellia-redis-proxy:
     password: GqdLSFUhnm6MpyeVKIu3
     local:
       type: simple #simple、complex
-      resource: redis-cluster://@192.168.0.242:6401,192.168.0.242:6402,192.168.0.242:6403,192.168.0.242:6404,192.168.0.242:6405,192.168.0.242:6406 #target transpond redis address
+      resource: redis-cluster://GqdLSFUhnm6MpyeVKIu3@192.168.0.242:6401,192.168.0.242:6402,192.168.0.242:6403,192.168.0.242:6404,192.168.0.242:6405,192.168.0.242:6406 #target transpond redis address
 #      resource: redis-cluster://@127.0.0.1:6379,127.0.0.1:6380,127.0.0.1:6381,127.0.0.1:6382,127.0.0.1:6383,127.0.0.1:6384
 #      resource: redis-sentinel://@127.0.0.1:26379/master1
 #      resource: redis-sentinel-slaves://@127.0.0.1:26379/master1
